--- a/garagefriesian/src/components/layout/Navbar.module.css
+++ b/garagefriesian/src/components/layout/Navbar.module.css
@@ -12,6 +12,20 @@
     background: none;
 }
 
+img{
+    width: 2.2rem;
+    height: 1.6rem;
+}
+
+.logomenor{
+    background-color: #F3F30A;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.5rem;
+}
+
 .navmenu {
     background-color: #080702;
     width: 250px;
@@ -59,11 +73,18 @@
 }
 
 .navbartoggle {
+    display: flex;
     background-color: #080702;
     width: 100%;
-    height: 80px;
+    height: 110px;
     justify-content: start;
     align-items: center;
+}
+
+svg{
+    color: #F5F4F4;
+    stroke-width: 4;
+    height: 23px;
 }
 
 span {
