--- a/garagefriesian/src/components/layout/Navbar.module.css
+++ b/garagefriesian/src/components/layout/Navbar.module.css
@@ -45,11 +45,11 @@ img{
 
 .navtext {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
-    height: 60px;
+    height: 3rem;
 }
 
 .navtext a {
@@ -70,6 +70,9 @@ img{
 
 .navmenuitems {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 
 .navbartoggle {
