--- a/garagefriesian/src/components/layout/Container.module.css
+++ b/garagefriesian/src/components/layout/Container.module.css
@@ -1,5 +1,5 @@
 .container{
-    width: 1200px;
+    max-width: 1200vh;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
