--- a/garagefriesian/src/components/pages/Categoria/Categoria.module.css
+++ b/garagefriesian/src/components/pages/Categoria/Categoria.module.css
@@ -1,10 +1,53 @@
 .containerCategorias{
-    border: 4px solid black;
+    display: flex;
+    border: 2px solid black;
     border-radius: 10px;
     background-color: #FFF;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px auto;
+    padding: 5vw;
 }
 
 .subtitle{
     border: 2px solid black;
-    background-color: yellow;
+    border-radius: 5px;
+    padding: 2px;
+    background-color: #fcfc05;
+}
+
+.inputGeral{
+    display: flex;
+    flex-direction: row;
+    padding: 10%;
+    gap: 20px;
+}
+
+.inputGeral > p{
+    display: flex;
+    align-items: center;
+    gap:2px;
+    font-weight: bold;
+}
+
+p > input{
+    font-size: 13px;
+    border-radius: 5px;
+}
+
+button{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    border:none;
+    background-color: #f3f30ad2;
+    color: #080702;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.03s ease;
+}
+
+button:hover{
+    border: 1px solid #080702;
+    background-color: #fcfc05;
 }
